--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
+  --background: #89c683;
   --foreground: #171717;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0a2309;
     --foreground: #ededed;
   }
 }
@@ -23,4 +23,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('./../public/bgMosque.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#bgMosque {
+  position: relative;
+  opacity: 40%;
 }
